--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </section>
 
         <!-- Welcome One Start -->
-        <section class="welcome_one">
+        <section class="welcome_one" id="nosotros">
             <div class="welcome_one_shape_bg"
                 style="background-image: url(assets/images/resources/welcome_one_shape-bg.png)"></div>
             <div class="container">
@@ -267,7 +267,7 @@
 
         <!-- Our Services One Start -->
        <!-- Nuestros Servicios Inicio -->
-<section class="our_services_one">
+<section class="our_services_one" id="servicios">
     <div class="container">
         <div class="block-title text-center">
             <h4>Somos Especialistas en</h4>
