--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                     <div class="col-xl-12">
                                         <p>AFB Técnicos Asociados SAC</p>
                                         <h2>Construcción de obras<br> públicas y privadas </h2>
-                                        <a href="about.html" class="thm-btn">get to know us</a>
+                                        <a href="contacto.html" class="thm-btn">Contactar</a>
                                     </div>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                                     <div class="col-xl-12">
                                         <p>AFB Técnicos Asociados SAC</p>
                                         <h2>Elaboración de <br> expedientes técnicos</h2>
-                                        <a href="about.html" class="thm-btn">get to know us</a>
+                                        <a href="contacto.html" class="thm-btn">Contactar</a>
                                     </div>
                                 </div>
                             </div>
