--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                     <div class="col-xl-12">
                                         <p>AFB Técnicos Asociados SAC</p>
                                         <h2>Servicios de medición <br> topográfica</h2>
-                                        <a href="about.html" class="thm-btn">get to know us</a>
+                                        <a href="contacto.html" class="thm-btn">Contactar</a>
                                     </div>
                                 </div>
                             </div>
