--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <div class="col-xl-6">
                         <div class="block-title text-left">
                             <h4>Ejecución de Obras</h4>
-                            <h2>Nuestra Graleía de Proyectos realizados</h2>
+                            <h2>Nuestra Gralería de Proyectos realizados</h2>
                         </div>
                     </div>
                     
