--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 <h3>¡Descubre la calidad en cada obra con nosotros!</h3>
                             </div>
                             <div class="cta_one_right_btn">
-                                <a href="services.html" class="thm-btn">Contactar</a>
+                                <a href="contacto.html" class="thm-btn">Contactar</a>
                             </div>
                         </div>
                     </div>
